     [sshpty.c]
     don't call error() for readonly /dev; from soekris list; ok mcbride,
     henning, deraadt.
   - markus@cvs.openbsd.org 2003/02/04 09:32:08
     [key.c]
     better debug3 message
   - markus@cvs.openbsd.org 2003/02/04 09:33:22
     [monitor.c monitor_wrap.c]
     skey/bsdauth: use 0 to indicate failure instead of -1, because
     the buffer API only supports unsigned ints.

20030211
 - (djm) Cygwin needs libcrypt too. Patch from vinschen@redhat.com

20030206
 - (djm) Teach fake-getaddrinfo to use getservbyname() when provided a 
   string service name. Suggested by markus@, review by itojun@

20030131
 - (bal) AIX 4.2.1 lacks nanosleep().  Patch to use nsleep() provided by
   dtucker@zip.com.au

20030130
 - (djm) Unbreak root password auth. Spotted by dtucker@zip.com.au

200301028
 - (djm) Search libposix4 and librt for nanosleep. From dtucker@zip.com.au 
   and openssh-unix-dev@thewrittenword.com 

200301027
 - (bal) Bugzilla 477 patch by wendyp@cray.com.  Define TIOCGPGRP for
   cray.  Also removed test for tcgetpgrp in configure.ac since it
   is no longer used.

20030124
 - (djm) OpenBSD CVS Sync
   - jmc@cvs.openbsd.org 2003/01/23 08:58:47
     [sshd_config.5]
     typos; ok millert@
   - markus@cvs.openbsd.org 2003/01/23 13:50:27
     [authfd.c authfd.h readpass.c ssh-add.1 ssh-add.c ssh-agent.c]
     ssh-add -c, prompt user for confirmation (using ssh-askpass) when
     private agent key is used; with djm@; test by dugsong@, djm@; 
     ok deraadt@
   - markus@cvs.openbsd.org 2003/01/23 14:01:53
     [scp.c]
     bandwidth limitation patch (scp -l) from niels@; ok todd@, deraadt@
   - markus@cvs.openbsd.org 2003/01/23 14:06:15
     [scp.1 scp.c]
     scp -12; Sam Smith and others; ok provos@, deraadt@
 - (djm) Add TIMEVAL_TO_TIMESPEC macros

20030123
 - (djm) OpenBSD CVS Sync
   - djm@cvs.openbsd.org 2003/01/23 00:03:00
     [auth1.c]
     Don't log TIS auth response; "get rid of it" - markus@

20030122
 - (djm) OpenBSD CVS Sync